# smptera-format-identifiers-rust

./: .gitmodules
.github/: dependabot.yml
.github/workflows/: rust.yml
format-identifier_crategen/: Cargo.toml
format-identifier_crategen/src/: database.rs  generate.rs  main.rs
smptera-format-identifiers-rust/: Cargo.toml  README.md
smptera-format-identifiers-rust/src/: generated.rs  lib.rs
