[package]
name = "format-identifier_crategen"
version = "0.1.0"
authors = ["David Holroyd <dave@badgers-in-foil.co.uk>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.3"
serde = { version = "1.0", features = ["derive"] }
syn = "2"
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
convert_case = "0.4.0"
